--- a/cf.yml
+++ b/cf.yml
@@ -174,6 +174,11 @@ Parameters:
     Type: String
     Description: "A comma delimited list of mod jars that will be retrieved at startup, and installed."
     Default: ""
+    
+  ModrinthProjects:
+    Type: String
+    Description: "A comma delimited list of modrinth project names that will be retrieved at startup, and installed."
+    Default: ""
 
 Metadata:
   AWS::CloudFormation::Interface:
@@ -306,6 +311,7 @@ Conditions:
   EnableRollingLogsProvided: !Not [ !Equals [ !Ref EnableRollingLogs, '' ] ]
   TimezoneProvided: !Not [ !Equals [ !Ref Timezone, '' ] ]
   ModsProvided: !Not [ !Equals [ !Ref Mods, '' ] ]
+  ModrinthProjectsProvided: !Not [ !Equals [ !Ref ModrinthProjects, '' ] ]
 
 
 Mappings:
@@ -666,6 +672,11 @@ Resources:
               - ModsProvided
               - Name: "MODS"
                 Value: !Sub "${Mods}"
+              - !Ref 'AWS::NoValue'
+            - !If
+              - ModrinthProjectsProvided
+              - Name: "MODRINTH_PROJECTS"
+                Value: !Sub "${ModrinthProjects}"
               - !Ref 'AWS::NoValue'
   CloudWatchLogGroup:
     Condition: LogGroupNameProvided
