--- a/minecraft-dev-deploy.yml
+++ b/minecraft-dev-deploy.yml
@@ -29,7 +29,7 @@ parameters:
   Whitelist: Hodgeka91,trashkw33n,jollyjerr
   LogGroupRetentionInDays: '7'
   MinecraftVersion: 1.20.1
-  ModrinthProjects: |
-    fabric-api # Required for many mods
-    comforts # Hammocks and sleeping bags
+  ModrinthProjects:
+    - "fabric-api" # Required for many mods
+    - "comforts" # Hammocks and sleeping bags
 tags: {}
