--- a/minecraft-dev-deploy.yml
+++ b/minecraft-dev-deploy.yml
@@ -18,7 +18,7 @@ parameters:
   ECSAMI: /aws/service/ecs/optimized-ami/amazon-linux-2/recommended/image_id
   AdminPlayerNames: Hodgeka91
   KeyPairName: minecraft
-  ServerState: Running
+  ServerState: Stopped
   HostedZoneId: Z0384235218U1Q4GBW6HZ
   MinecraftImageTag: latest
   LogStreamPrefix: minecraft-server
