--- a/cf.yml
+++ b/cf.yml
@@ -479,7 +479,9 @@ Resources:
           sudo ./aws/install
           aws s3 cp s3://weenyhut/.profile ~/.profile
           echo "INSTANCE_ID=$(ec2-metadata | grep -i instance-id | awk '{print $2}')" >> ~/.profile
-          echo "ECS_CLUSTER=${EcsCluster}" >> ~/.profile
+          echo "ECS_CLUSTER=${AWS::StackName}-cluster" >> ~/.profile
+          echo "AUTOSCALING_GROUP=${AWS::StackName}-asg" >> ~/.profile
+          echo "ECS_SERVICE=${AWS::StackName}-ecs-service" >> ~/.profile
           sudo curl -o /usr/local/bin/autoshutdown https://raw.githubusercontent.com/mpryor/minecraft-weeny-hut-server/refs/heads/master/scripts/autoshutdown
           sudo chmod +x /usr/local/bin/autoshutdown
           echo "* * * * * source ~/.profile; /usr/local/bin/autoshutdown" | sudo crontab -
