--- a/cf.yml
+++ b/cf.yml
@@ -478,10 +478,10 @@ Resources:
           unzip awscliv2.zip
           sudo ./aws/install
           aws s3 cp s3://weenyhut/.profile ~/.profile
-          echo "INSTANCE_ID=$(ec2-metadata | grep -i instance-id | awk '{print $2}' | head -1)" >> ~/.profile
-          echo "ECS_CLUSTER=${AWS::StackName}-cluster" >> ~/.profile
-          echo "AUTOSCALING_GROUP=${AWS::StackName}-asg" >> ~/.profile
-          echo "ECS_SERVICE=${AWS::StackName}-ecs-service" >> ~/.profile
+          echo "export INSTANCE_ID=$(ec2-metadata | grep -i instance-id | awk '{print $2}' | head -1)" >> ~/.profile
+          echo "export ECS_CLUSTER=${AWS::StackName}-cluster" >> ~/.profile
+          echo "export AUTOSCALING_GROUP=${AWS::StackName}-asg" >> ~/.profile
+          echo "export ECS_SERVICE=${AWS::StackName}-ecs-service" >> ~/.profile
           sudo curl -o /usr/local/bin/autoshutdown https://raw.githubusercontent.com/mpryor/minecraft-weeny-hut-server/refs/heads/master/scripts/autoshutdown
           sudo chmod +x /usr/local/bin/autoshutdown
           echo "* * * * * source ~/.profile; /usr/local/bin/autoshutdown" | sudo crontab -
