--- a/minecraft-dev-deploy.yml
+++ b/minecraft-dev-deploy.yml
@@ -31,6 +31,7 @@ parameters:
   MinecraftVersion: 1.20.1
   ModrinthProjects: |
     fabric-api
-    animal_feeding_trough
+    animal_feeding_trough    
+    architectury
     comforts
 tags: {}
