--- a/minecraft-dev-deploy.yml
+++ b/minecraft-dev-deploy.yml
@@ -32,6 +32,6 @@ parameters:
   ModrinthProjects: |
     fabric-api
     animal_feeding_trough
-    architectury
+    architectury-api
     comforts
 tags: {}
