Unloaded activity -> beta

--- a/minecraft-dev-deploy.yml
+++ b/minecraft-dev-deploy.yml
@@ -61,7 +61,7 @@ parameters:
     towns-and-towers
     trinkets
     universal-graves
-    unloaded-activity
+    unloaded-activity:beta
     waystones
     what-are-they-up-to
     xp-storage
