--- a/minecraft-dev-deploy.yml
+++ b/minecraft-dev-deploy.yml
@@ -48,6 +48,7 @@ parameters:
     death-finder
     deeperdarker
     double-doors
+    dynmap
     fallingtree
     fabric-language-kotlin
     ferrite-core
