--- a/minecraft-dev-deploy.yml
+++ b/minecraft-dev-deploy.yml
@@ -29,6 +29,7 @@ parameters:
   Whitelist: Hodgeka91,trashkw33n,jollyjerr
   LogGroupRetentionInDays: '7'
   MinecraftVersion: 1.20.1
+  S3ProfileName: .profile-dev
   ModrinthProjects: |
     fabric-api
     forge-config-api-port
