--- a/minecraft-dev-deploy.yml
+++ b/minecraft-dev-deploy.yml
@@ -30,6 +30,7 @@ parameters:
   LogGroupRetentionInDays: '7'
   MinecraftVersion: 1.20.1
   S3ProfileName: .profile-dev
+  DiscordChannelId: "1298372122812612714"
   ModrinthProjects: |
     fabric-api
     forge-config-api-port
