Added MaxMinutesIdle to parameter list

--- a/cf.yml
+++ b/cf.yml
@@ -190,6 +190,11 @@ Parameters:
     Description: "The id of the discord channel used by the autoshutdown script"
     Default: ""
 
+  MaxMinutesIdle:
+    Type: String
+    Description: "The number of consecutive minutes the server can be idle before it shuts itself down"
+    Default: "30"
+
 Metadata:
   AWS::CloudFormation::Interface:
     ParameterGroups:
@@ -487,6 +492,7 @@ Resources:
           unzip awscliv2.zip
           sudo ./aws/install
           aws s3 cp "s3://weenyhut/${S3ProfileName}" ~/.profile
+          echo "export MAX_MINUTES_IDLE=${MaxMinutesIdle}" >> ~/.profile
           echo "export CHANNEL_ID=${DiscordChannelId}" >> ~/.profile
           echo "export INSTANCE_ID=$(ec2-metadata | grep -i instance-id | awk '{print $2}' | head -1)" >> ~/.profile
           echo "export STACK_NAME=${AWS::StackName}" >> ~/.profile
