--- a/minecraft-dev-deploy.yml
+++ b/minecraft-dev-deploy.yml
@@ -31,6 +31,7 @@ parameters:
   MinecraftVersion: 1.20.1
   S3ProfileName: .profile-dev
   DiscordChannelId: "1298372122812612714"
+  MaxMinutesIdle: "20"
   ModrinthProjects: |
     fabric-api
     forge-config-api-port
