--- a/minecraft-prod-deploy.yml
+++ b/minecraft-prod-deploy.yml
@@ -31,6 +31,7 @@ parameters:
   MinecraftVersion: 1.20.1
   S3ProfileName: .profile-prod
   DiscordChannelId: "1298372122812612714"
+  MaxMinutesIdle: "60"
   ModrinthProjects: |
     fabric-api
     forge-config-api-port
