Update create-fabric version in deployment config

--- a/minecraft-dev-deploy.yml
+++ b/minecraft-dev-deploy.yml
@@ -43,7 +43,7 @@ parameters:
     carry-on
     cloth-config
     clumps
-    create-fabric
+    create-fabric:7Ub71nPb
     cristel-lib
     collective
     comforts
