--- a/minecraft-prod-deploy.yml
+++ b/minecraft-prod-deploy.yml
@@ -3,36 +3,7 @@ parameters:
   RecordName: weenyhut.com
   Timezone: ''
   LevelType: DEFAULT
-  Difficulty: normal
-  Memory: 4G
-  EntryPoint: ''
-  ViewDistance: '-1'
-  SpotPrice: '0.05'
-  MaxPlayers: '-1'
-  ContainerInsights: disabled
-  YourIPv4: 76.131.113.171
-  MinecraftTypeTag: FABRIC
-  YourIPv6: ''
-  LogGroupName: ''
-  InstanceType: t3.large
-  ECSAMI: /aws/service/ecs/optimized-ami/amazon-linux-2/recommended/image_id
-  AdminPlayerNames: Hodgeka91,trashkw33n,jollyjerr,LANMAN23
-  KeyPairName: minecraft
-  ServerState: Running
-  HostedZoneId: Z0384235218U1Q4GBW6HZ
-  MinecraftImageTag: latest
-  LogStreamPrefix: minecraft-server
-  GameMode: survival
-  Command: ''
-  Seed: '4482410790499076715'
-  EnableRollingLogs: 'false'
-  Whitelist: Hodgeka91,trashkw33n,jollyjerr
-  LogGroupRetentionInDays: '7'
-  MinecraftVersion: 1.20.1
-  S3ProfileName: .profile-prod
-  DiscordChannelId: "1178899981516689570"
-  MaxMinutesIdle: "60"
-  ModrinthProjects: |
+  ModrinthProjects: |-
     fabric-api
     forge-config-api-port
     animal_feeding_trough
@@ -43,7 +14,6 @@ parameters:
     carry-on
     cloth-config
     clumps
-    create-fabric:7Ub71nPb
     cristel-lib
     collective
     comforts
@@ -52,6 +22,7 @@ parameters:
     death-finder
     deeperdarker
     double-doors
+    dynmap
     fallingtree
     fabric-language-kotlin
     ferrite-core
@@ -85,4 +56,34 @@ parameters:
     yungs-better-witch-huts
     yungs-bridges
     yungs-extras
+  Difficulty: normal
+  Memory: 4G
+  EntryPoint: ''
+  ViewDistance: '-1'
+  SpotPrice: '0.05'
+  MaxPlayers: '-1'
+  MaxMinutesIdle: '60'
+  ContainerInsights: disabled
+  YourIPv4: 76.131.113.171
+  MinecraftTypeTag: FABRIC
+  YourIPv6: ''
+  LogGroupName: ''
+  InstanceType: t3.large
+  ECSAMI: /aws/service/ecs/optimized-ami/amazon-linux-2/recommended/image_id
+  AdminPlayerNames: Hodgeka91,trashkw33n,jollyjerr
+  KeyPairName: minecraft
+  ServerState: Running
+  HostedZoneId: Z0384235218U1Q4GBW6HZ
+  MinecraftImageTag: latest
+  S3ProfileName: .profile-prod
+  LogStreamPrefix: minecraft-server
+  GameMode: survival
+  Command: ''
+  Mods: ''
+  Seed: '4482410790499076715'
+  EnableRollingLogs: 'false'
+  Whitelist: Hodgeka91,trashkw33n,jollyjerr
+  DiscordChannelId: '1178899981516689570'
+  LogGroupRetentionInDays: '7'
+  MinecraftVersion: 1.20.1
 tags: {}
