Update create-fabric dependency in YAML file

--- a/minecraft-dev-deploy.yml
+++ b/minecraft-dev-deploy.yml
@@ -43,7 +43,7 @@ parameters:
     carry-on
     cloth-config
     clumps
-    create-fabric:7Ub71nPb
+    create-fabric
     cristel-lib
     collective
     comforts
