Update deeperdarker dependency with version

--- a/minecraft-prod-deploy.yml
+++ b/minecraft-prod-deploy.yml
@@ -50,7 +50,7 @@ parameters:
     coroutil
     dcintegration
     death-finder
-    deeperdarker
+    deeperdarker:vk0DMgtP
     double-doors
     fallingtree
     fabric-language-kotlin
